# boxmot

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Heatmap.py  MANIFEST.in  Makefile  OPENVINO_README.md  OPENVINO_TOOLS_README.md  README.md  USE_CAPTIONING_EXAMPLE.md  __init__.py  aiwei_2_change_1_log.txt  aiwei_2_default_log.txt  botsort_study.pkl  combined_results.csv  compare_inference.py  config.sh  deepocsort_output.json  deepocsort_study.pkl  detect_track.py  docker-compose.yml  evolve.py  fff.py  fix_yolov8_openvino.py  frameget.py  gt_num_count.py  imprassoc_study.pkl  index.html  main.py  main.sh  mkdocs.yml  (+53 more)
.github/: FUNDING.yml  dependabot.yml
Final/: export.py  load_model.py  reid_export.py  test_thread_model.py
MOT16_eval/: eval.sh
YOLOv6/: README.md  export.py
assets/: file_banner.txt
autoresearch/: README.md  common.py  log.py  program.md  train.py
boxmot/: __init__.py  api.py  model.py  tracker_zoo.py  utils.py
boxmot/engine/TrackEval/: .gitignore  LICENSE  Readme.md  minimum_requirements.txt  setup.cfg
boxmot/engine/TrackEval/docs/: DAVIS-format.txt  KITTI-format.txt  MOTChallenge-format.txt  MOTS-format.txt
boxmot/engine/TrackEval/docs/OpenWorldTracking-Official/: Readme.md
boxmot/engine/TrackEval/scripts/: run_kitti.py  run_mot_challenge.py  run_mots_challenge.py  run_tao.py  run_tao_ow.py  run_youtube_vis.py
boxmot/engine/TrackEval/tests/: test_davis.py  test_metrics.py  test_mot17.py
boxmot/engine/TrackEval/trackeval/: _timing.py  eval.py  plotting.py  utils.py
boxmot/engine/TrackEval/trackeval/baselines/: __init__.py  non_overlap.py  stp.py  thresholder.py
boxmot/engine/TrackEval/trackeval/datasets/: __init__.py  bdd100k.py  head_tracking_challenge.py  kitti_2d_box.py  kitti_mots.py  mot_challenge_2d_box.py  mots_challenge.py  person_path_22.py  rob_mots.py  rob_mots_classmap.py  tao_ow.py  youtube_vis.py
boxmot/engine/TrackEval/trackeval/datasets/burst_helpers/: burst_base.py  tao_categories.json
boxmot/engine/TrackEval/trackeval/metrics/: __init__.py  count.py  identity.py  track_map.py  vace.py
boxmot/native/trackers/: CMakeLists.txt  README.md  __init__.py  _common.py  botsort.py  bytetrack.py  occluboost.py  ocsort.py  sfsort.py
boxmot/native/trackers/base/: CMakeLists.txt
boxmot/native/trackers/base/include/boxmot/trackers/base/: reid_onnx.hpp  replay.hpp
boxmot/native/trackers/base/src/: assignment.cpp  io.cpp  reid_capi.cpp  reid_onnx.cpp
boxmot/native/trackers/botsort/: CMakeLists.txt  README.md
boxmot/native/trackers/botsort/include/botsort/: c_api.hpp  reid_onnx.hpp  tracker.hpp
boxmot/native/trackers/botsort/src/: c_api.cpp  cmc.cpp  main.cpp  reid_onnx.cpp  tracker.cpp
boxmot/native/trackers/bytetrack/: CMakeLists.txt
boxmot/native/trackers/bytetrack/include/bytetrack/: c_api.hpp  data_io.hpp  kalman_filter.hpp  tracker.hpp
boxmot/native/trackers/bytetrack/src/: kalman_filter.cpp
boxmot/native/trackers/cmake/: BoxMOTNative.cmake  BoxMOTNativeCompiler.cmake
boxmot/native/trackers/deepstream/: CMakeLists.txt  README.md  config_tracker_boxmot.yml
boxmot/native/trackers/deepstream/include/deepstream/: adapter_context.hpp  adapter_types.hpp  nvdstracker_stub.h  reid_tensorrt.hpp
boxmot/native/trackers/deepstream/src/: adapter_context.cpp  config_parser.cpp  nvds_tracker_api.cpp  reid_tensorrt.cpp
boxmot/native/trackers/occluboost/: CMakeLists.txt
boxmot/native/trackers/occluboost/include/occluboost/: association.hpp  c_api.hpp  cmc.hpp  data_io.hpp  reid_onnx.hpp  track.hpp  tracker.hpp  types.hpp
boxmot/native/trackers/occluboost/src/: association.cpp  c_api.cpp  data_io.cpp  main.cpp  reid_onnx.cpp  track.cpp  tracker.cpp
boxmot/native/trackers/ocsort/: CMakeLists.txt
boxmot/native/trackers/ocsort/include/ocsort/: c_api.hpp  data_io.hpp
boxmot/native/trackers/sfsort/: CMakeLists.txt
boxmot/native/trackers/sfsort/include/sfsort/: data_io.hpp  tracker.hpp  types.hpp
calliberation/: calliberate.py  coor1.txt  coor2.txt  coor_cam1_daiso_640.npy  coor_cam1_daiso_640.txt  coor_cam2_daiso_640.npy  coor_cam2_daiso_640.txt  coor_ele_1280.npy  coor_ele_1280.txt  coor_ele_640.npy  coor_ele_640.txt  coor_en_1280.npy  coor_en_1280.txt  coor_en_640.npy  coor_en_640.txt  coor_in_1280.npy  coor_in_1280.txt  coor_in_640.npy  coor_in_640.txt  transformation_matrix1.npy  transformation_matrix2.npy
concepts/: index.html
config/: index.html
contributing/: index.html
datasets/: train.txt  val.txt
deep_sort/: LICENSE  __init__.py  deep_sort.py  ped_det_server.py  yolov3_deepsort.py  yolov3_deepsort_eval.py
docs/: AGENTS.md  (+4 more)
native/trackers/: CMakeLists.txt  README.md
native/trackers/base/: CMakeLists.txt
native/trackers/base/include/boxmot/trackers/base/: base_tracker.hpp  io.hpp  live_c_api.hpp  native_runtime.hpp  reid_capi.h  reid_onnx.hpp
native/trackers/base/src/: assignment.cpp  io.cpp  reid_onnx.cpp
native/trackers/botsort/: CMakeLists.txt  README.md
native/trackers/botsort/include/botsort/: cmc.hpp  data_io.hpp  reid_onnx.hpp  types.hpp
native/trackers/botsort/src/: data_io.cpp  kalman_filter.cpp  reid_onnx.cpp  track.cpp  tracker.cpp
native/trackers/bytetrack/include/bytetrack/: track.hpp  types.hpp
native/trackers/bytetrack/src/: c_api.cpp  data_io.cpp  main.cpp  track.cpp  tracker.cpp
native/trackers/cmake/: BoxMOTNativeCompiler.cmake
native/trackers/occluboost/: CMakeLists.txt
native/trackers/occluboost/include/occluboost/: association.hpp  kalman_filter.hpp  reid_onnx.hpp  tracker.hpp  types.hpp
native/trackers/occluboost/src/: association.cpp  c_api.cpp  cmc.cpp  data_io.cpp  kalman_filter.cpp  reid_onnx.cpp  tracker.cpp
native/trackers/ocsort/: CMakeLists.txt
native/trackers/ocsort/include/ocsort/: kalman_filter.hpp  types.hpp
native/trackers/ocsort/src/: c_api.cpp  main.cpp
native/trackers/sfsort/include/sfsort/: c_api.hpp
native/trackers/sfsort/src/: c_api.cpp  data_io.cpp  main.cpp  tracker.cpp
(+1659 files in other folders)
