# =====================================================
# pyproject.toml for BoxMOT
# =====================================================

#########################
# UV-specific Overrides #
#########################

[tool.uv]
preview = true
extra-build-dependencies = { yolox = ["setuptools", "torch<3.0.0,>=2.2.1"] }

# Override yolox's outdated dependencies
[[tool.uv.dependency-metadata]]
name          = "yolox"
version       = "0.3.0"
requires-dist = [
  "onnx>=1.17.0",
  "onnxsim>=0.4.33,<0.5 ; python_version < '3.12'",
  "onnxsim-prebuilt>=0.4.36.post1 ; python_version >= '3.12'",
  "tabulate",
]

[tool.ruff]
line-length = 120
exclude = [".tox", "*.egg", "build", "temp"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E731", "F405", "E402", "E741"]

[tool.pytest.ini_options]
norecursedirs = ["boxmot/engine/eval/trackeval/tests", "runs"]

##############
# Build System #
##############

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

###########
# Project #
###########

[project]
name            = "boxmot"
version         = "21.0.0"
description     = "BoxMOT: pluggable SOTA tracking modules for segmentation, object detection and pose estimation models"
readme          = "README.md"
requires-python = ">=3.10,<3.14"
license         = { text = "AGPL-3.0" }

authors = [
  { name = "Mikel Broström" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Image Processing",
]

keywords = [
  "tracking",
  "tracking-by-detection",
  "machine-learning",
  "deep-learning",
  "vision",
  "ML",
  "DL",
  "AI",
  "YOLO",
]

dependencies = [
  # Kalman filters for motion models (SORT/OCSort/HybridSort)
  "filterpy<2.0.0,>=1.4.5",
  # Download pretrained weights/checkpoints from Google Drive
  "gdown<6.0.0,>=5.1.0",
  # Fast LAP/Hungarian solver for data association
  "lapx<1.0.0,>=0.5.5",
  "numpy>=2.2.0",
  "regex>=2024.0.0",
  "scikit-learn<2.0.0,>=1.3.0",
  "pandas<3.0.0,>=2.0.0",
  "opencv-python<5.0.0,>=4.7.0",
  "torch>=2.2.1,<3.0.0",
  "torchvision>=0.17.1,<1.0.0",
  "click>=8.1.8",
  # Rich console + logging UI used across the CLI workflows.
  "rich>=15.0.0",
  # clip reid needs
  "ftfy<7.0.0,>=6.1.3",
  "yacs<1.0.0,>=0.1.8",
  "huggingface-hub>=1.7.1",
]

[project.scripts]
boxmot = "boxmot.engine.cli:main"

########################################
# local-only “dev/test/docs/ci” stacks #
########################################

[dependency-groups]
dev  = ["ipykernel>=6.29.5,<7.0.0", "pre-commit>=4.0.1"]
test = ["pytest>=8.0.2,<10.0.0", "pytest-cov>=6.0.0,<7.0.0"]
docs = [
  "mkdocs>=1.6.1", "mkdocs-click>=0.9.0",
  "mkdocs-include-markdown-plugin>=7.1.6",
  "mkdocs-material==9.6.15",
  "mkdocstrings>=0.30.0", "mkdocstrings-python>=1.16.12",
]

#############################
# runtime / feature toggles #
#############################

[project.optional-dependencies]
yolo = [
  "ultralytics>=8.4.58",
  "yolox==0.3.0",
  # yolox 0.3.0 imports loguru in its dist utilities but does not declare it
  # in the metadata uv reads, so pull it in explicitly here.
  "loguru>=0.7.2,<1.0.0",
]

evolve = [
  "ray[tune]==2.52.1",
  "matplotlib>=3.8.0,<4.0.0",
  "seaborn>=0.13.0,<1.0.0",
  "scipy>=1.11.0,<2.0.0",
  "plotly==5.19.0",
  "bayesian-optimization==2.0.4",
  "optuna==3.5.0",
  "hyperopt>=0.2.7",
  "pydantic>=2.5.0,<2.12.0"
]

research = [
  "gepa[full]>=0.1.1",
]

onnx = [
  "onnx==1.20.1",
  "onnxruntime==1.24.3",
  "onnxslim>=0.1.67",
  "onnxscript>=0.1.0"
]

openvino = ["openvino>=2025.2.0"]

tflite = [
  "litert-torch==0.9.1",
]

rtdetr = [
  "transformers>=5.0.0",
]
